--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="tekitou2">
         <p>社畜になるのが嫌だ</p>
-        <img src="tanaka-img/tanakadesu/hatarakitakunai.jpg" class="syatiku">
+        <img src="https://github.com/kaito216/tanakadesu/blob/master/hatarakitakunai.jpg?raw=true">
       </div>
       </div>
   </div>
