--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
       <div class="tekitou1">
         <p>マジでいっつも寝てるうらやましいこいつ。</p>
-        <img src="tanaka-img/tanakadesu/ni-to.jpg" class="ni-to">
+        <img src="https://github.com/kaito216/tanakadesu/blob/master/ni-to.jpg?raw=true" class="ni-to">
       </div>
       <div class="tekitou2">
         <p>社畜になるのが嫌だ</p>
