--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       TWICEにはまってます。<br>特技は太鼓殴ることです。レオパ（レオパードゲッコー、ヒョウモントカゲモドキ）と一緒にニートしてる。</p>
   </div>
       <div class="tekitou1">
-        <p>マジでいっつも寝てるうらやましいこいつ。</p>
+        <p>いっつも寝てるニート</p>
         <img src="https://github.com/kaito216/tanakadesu/blob/master/ni-to.jpg?raw=true" class="ni-to">
       </div>
       <div class="tekitou2">
