--- a/index.html
+++ b/index.html
@@ -42,5 +42,17 @@
       </div>
   </div>
 </div>
+  <footer>
+ <div class="footer-logo">
+   田中デンワ<i class="fas fa-phone"></i>
+</div>
+<div class="footer-list">
+  <ul>
+    <li><a href="jiko">自己紹介</a></li>
+    <li><a href="#">トカゲ</a></li>
+    <li><a href="#">その他</a></li>
+  </ul>
+</div>
+</footer>
 </body>
 </html>
