--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="header-list">
   <ul>
     <li><a href="#jiko">自己紹介</a></li>
-    <li><a href="tokage.html">トカゲ</a></li>
+    <li><a href="https://kaito216.github.io/ta/">トカゲ</a></li>
     <li><a href="#">その他</a></li>
   </ul>
 </div>
