--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <ul>
     <li><a href="#jiko">自己紹介</a></li>
     <li><a href="https://kaito216.github.io/ta/">トカゲ</a></li>
-    <li><a href="#">その他</a></li>
+    <li><a href="https://kaito216.github.io/sonota.html/">その他</a></li>
   </ul>
 </div>
 </header>
@@ -49,8 +49,8 @@
 <div class="footer-list">
   <ul>
     <li><a href="jiko">自己紹介</a></li>
-    <li><a href="#">トカゲ</a></li>
-    <li><a href="#">その他</a></li>
+    <li><a href="https://kaito216.github.io/ta/">トカゲ</a></li>
+    <li><a href="https://kaito216.github.io/sonota.html/">その他</a></li>
   </ul>
 </div>
 </footer>
